# auto-pr

./: README.md  pyproject.toml
notebooks/: eg_gitlab.ipynb  eg_gitlab_commit_hist.ipynb  eg_langchain.ipynb
src/: gitlab.py  prompt_templates.py
